...
              Icon(Icons.colorize_outlined, size: 24, color: onSurfaceVariant),
          switchKey: const Key('use_dynamic_color_switch'),
        ),
        BlocConsumer<ThemeCubit, AppThemeSettings>(
          builder: (context, state) {
            return PreferenceSwitch(
              key: const Key('theme_mode_preference_switch'),
              switchKey: const Key('theme_mode_switch'),
              title: AppLocalizations.of(context).darkThemeSettingsItemTitle,
              description: state.darkTheme.isDarkTheme()
                  ? AppLocalizations.of(context).darkThemeOnSettingsItemTitle
                  : AppLocalizations.of(context).darkThemeOffSettingsItemTitle,
              isChecked: state.darkTheme.isDarkTheme() ? true : false,
              icon: AnimatedSwitcher(
...
