...
import 'package:flutter_bloc_app_template/features/roadster/roadster_screen.dart';
import 'package:flutter_bloc_app_template/features/rocket/rocket_screen.dart';
import 'package:flutter_bloc_app_template/index.dart';

class Routes {
  static const app = 'home';
  static const appearance = 'appearance';
  static const darkTheme = 'darkTheme';
  static const launch = 'launch';
  static const rocket = 'rocket';
  static const roadster = 'roadster';
}

...
    final isFullScreen = _fullScreenRoutes.contains(settings.name);
    final isCupertino = _cupertinoRoutes.contains(settings.name);
    final isAnimated = _animatedRoutes.contains(settings.name);

    if (isAnimated) {
      return PageRouteBuilder(
        settings: settings,
        pageBuilder: (context, animation, secondaryAnimation) =>
            builder(settings.arguments),
        transitionsBuilder: (context, animation, secondaryAnimation, child) {
          const begin = Offset(1.0, 0.0); // Slide from right
          const end = Offset.zero;
          const curve = Curves.easeInOut;
...
